OCaml 4.11.1 (31 August 2020)
-----------------------------

### Bug fixes:

- #9856, #9857: Prevent polymorphic type annotations from generalizing
  weak polymorphic variables.
  (Leo White, review by Jacques Garrigue)

- #9859, #9862: Remove an erroneous assertion when inferred function types
  appear in the right hand side of an explicit :> coercion
  (Florian Angeletti, review by Thomas Refis)

OCaml 4.11.0 (19 August 2020)
---------------------------

(Changes that can break existing programs are marked with a "*")

### Runtime system:

- #9096: Print function names in backtraces.
  Old output:
  > Called from file "foo.ml", line 16, characters 42-53
  New output:
  > Called from Foo.bar in file "foo.ml", line 16, characters 42-53
  (Stephen Dolan, review by Leo White and Mark Shinwell)

- #9082: The instrumented runtime now records logs in the CTF format.
  A new API is available in the runtime to collect runtime statistics,
  replacing the previous instrumented runtime macros.
  Gc.eventlog_pause and Gc.eventlog_resume were added to allow user to control
  instrumentation in a running program.
  See the manual for more information on how to use this instrumentation mode.
  (Enguerrand Decorne and Stephen Dolan, with help and review from
  David Allsopp, Sébastien Hinderer, review by Anil Madhavapeddy,
  Nicolás Ojeda Bär, Shakthi Kannan, KC Sivaramakrishnan, Gabriel Scherer,
  Guillaume Munch-Maccagnoni, Damien Doligez, Leo White, Daniel Bünzli
  and Xavier Leroy)

- #9230, #9362: Memprof support for native allocations.
  (Jacques-Henri Jourdan and Stephen Dolan, review by Gabriel Scherer)

- #8920, #9238, #9239, #9254, #9458: New API for statistical memory profiling
  in Memprof.Gc. The new version does no longer use ephemerons and allows
  registering callbacks for promotion and deallocation of memory
  blocks.
  The new API no longer gives the block tags to the allocation callback.
  (Stephen Dolan and Jacques-Henri Jourdan, review by Damien Doligez